--- a/src/app/assets/css/event-detail/event-detail.component.css
+++ b/src/app/assets/css/event-detail/event-detail.component.css
@@ -6,3 +6,8 @@
 .comment-wrap .views:nth-child(3) {
     border-right: 0px solid rgba(0, 0, 0, 0.2)!important;
 }
+
+.star-icon[_ngcontent-pic-11] {
+    font-size: 35px !important;
+   
+}
