--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -22,17 +22,18 @@
                         <div class="entry-header-title">
                             <h1 class="entry-title ">{{data.event_data.event_title}}</h1>
                             <div class="event_rating">
-                                <div class="event_rating_row"> <span><a href="#comments">{{data.review.review_count}}  Reviews</a></span> <span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i></span></div>
+                                <div class="event_rating_row"> <span><a href="#comments">{{data.review.review_count}}  Reviews</a></span> 
+                                <div style="float:right"> 
+                                 <rating [(ngModel)]="data.event_data.rating"
+                                 [readonly]="true" [float]="true">
+                                 </rating>
+                                 </div>
+                                 </div>
+
+                                
                             </div>
 
-                            <!--Image gallery Section Start -->
-                            <script type="text/javascript">
-                                jQuery(function () {
-                                    jQuery('#event_image_gallery .event_image a').lightBox();
-                                    
-                                });
-                            </script>
-
+                          
 
                             <div id="slider" class="event_image flexslider p-tb-30"> 
                                 <div class="flex-viewport" style="">
@@ -157,50 +158,17 @@
                         </li>
                     </ul>
                 </div>
-                <script type="text/javascript">
-                    jQuery(document).ready(function () {
-                        jQuery(".addtocalendar").css('visibility', 'hidden');
-
-                        jQuery(".calendar_show").mouseover(function () {
-                            console.log('hee');
-                            jQuery("#addtocalendar").css('visibility', 'visible');
-                        });
-                        jQuery(".calendar_show").mouseout(function () {
-                            jQuery("#addtocalendar").css('visibility', 'hidden');
-                        });
-                        jQuery("#addtocalendar").mouseover(function () {
-                            jQuery("#addtocalendar").css('visibility', 'visible');
-                        });
-                        jQuery("#addtocalendar").mouseout(function () {
-                            jQuery("#addtocalendar").css('visibility', 'hidden');
-                        });
-                    });
-
-
-                </script>
+               
                 <!--end post type title --> 
                 <div class="share_link">        
                     <span><a id="facebook" class="frontend_facebook " href="http//facebook.com/templatic"><i class="fa fa-facebook"></i> Facebook</a></span>
                     <span><a id="twitter" class="frontend_twitter " href="http://twitter.com/templatic"><i class="fa fa-twitter"></i> Twitter</a></span>
                     <span><a id="google_plus" class="frontend_google_plus " href="https://plus.google.com/templatic"><i class="fa fa-google-plus"></i> Google Plus</a></span>
                 </div>  
-                <script>
-                    jQuery('.share_link').each(function () {
-                        if (jQuery.trim(jQuery(this).text()).length == 0) {
-                            if (jQuery(this).children().length == 0) {
-                                jQuery(this).text('');
-                                // $(this).remove(); // remove empty paragraphs
-                            }
-                        }
-                    });
-                </script>
+               
                 <!-- event content-->
                 <div class="entry-content" jstcache="0">
-                    <script type="text/javascript">
-                        jQuery(function () {
-                            jQuery('#event_image_gallery .event_image a').lightBox();
-                        });
-                    </script>
+                  
 
                     <!-- Tabs Start -->
 
@@ -317,15 +285,11 @@
                     <!--Event Social Media Coding End -->
 
                     <div class="view_counter">
-                        <p>Visited 1355 times, 4 Visits today</p>
+                        <p>Visited {{data.event_data.visit}} times, {{data.event_data.today_visit}} Visits today</p>
                     </div>
                     <div class="post-meta" itemprop="eventType">                              
-                        Event Categories: <a href="">Concerts</a>, 
-                        <a href="">Events</a>, 
-                        <a href="">Musical</a>, 
-                        <a href="">Parties</a>, 
-                        <a href="">Performing Arts</a>, and 
-                        <a href="">Workshops</a>.     
+                        Event Categories: {{data.event_data.category_id}} 
+                       .     
                     </div>      
                 </div>
                 <!--Finish the listing Content --> 
@@ -740,7 +704,7 @@
                         <a href="" title="{{popular_event.event_title}}" class="link_img" data-rel="">
                             <img src="{{ popular_event.featured_image }}" alt="{{popular_event.event_title}}" class="Thumbnail thumbnail popular_post-thumbnail " width="60" height="60"></a>
 
-                            <div class="post_data"><h3><a (click)="gotoPage(popular_event.event_id)" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a>8 Comments</a></span><span class="date">2 years ago</span></p></div></li>
+                            <div class="post_data"><h3><a (click)="gotoPage(popular_event.event_id)" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a>{{popular_event.comment_count}} Comments</a></span><span class="date">2 years ago</span></p></div></li>
 
 
                         </ul>
@@ -794,7 +758,7 @@
         </div>
     </section>
     <!-- <app-footer></app-footer> -->
-<modal #delete_modal>
+<!-- <modal #delete_modal>
     <modal-header [show-close]="true">
         <h4 class="modal-title">Are you sure!</h4>
     </modal-header>
@@ -803,4 +767,4 @@
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="delete()">Ok</button>
         </modal-footer>
-   </modal>
+</modal> -->
