--- a/src/app/view/event/eventlist.component.html
+++ b/src/app/view/event/eventlist.component.html
@@ -58,11 +58,9 @@
                                     <div class="listing_rating">
                                         <div class="directory_rating_row">
                                             <span class="single_rating"> 
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
-                                                <i class="rating-on"></i>
+                                             <rating [(ngModel)]="events.rating"
+                                            [readonly]="true" [float]="true">
+                                            </rating>
                                             </span>
                                         </div>
                                     </div>
@@ -71,7 +69,7 @@
 
                                 <!-- Entry details start -->
                                 <div class="entry-details">
-                                    <p class="address" itemprop="address">308 West 46th Street New York, NY 10036</p>
+                                    <p  *ngIf = "getToken" class="address" itemprop="address">{{events.location}}</p>
                                     <p class="event_date">
                                         <span>
                                             <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_date}}</span>
@@ -81,7 +79,13 @@
                                     <p class="time">
                                         <span>{{events.start_time}} To {{events.end_time}}</span>
                                     </p><!--googleoff: all-->
-                                    <p class="phone">+86 10 6538 5537</p><!--googleon: all-->                                                                            </div>
+                                   <span *ngIf = "getToken">
+                                                      <p class="phone"  *ngIf = "events.contact_info!='' ">
+
+                                                      {{events.contact_info}}</p>
+                                                      </span>
+
+                                    <!--googleon: all-->                                                                            </div>
                                     <!-- Entry details end --> 
                                 </div>
                                 <!--Start Post Content -->
@@ -94,7 +98,7 @@
                                             </span>
                                         </li>
 
-                                        <li class="review"> <a id="reviews_show" href="">8 &nbsp;</a></li>
+                                        <li class="review"> <a id="reviews_show" href="">{{events.comment_count}} &nbsp;</a></li>
 
                                         <li class="pinpoint"><a id="pinpoint_27121" class="ping" href="">Pinpoint</a></li>               
                                     </ul>
@@ -120,7 +124,8 @@
                                             <div class="event-wrapper"> 
                                                 <!-- Entry title start -->
                                                 <div class="entry-title">
-                                                    <div class="event-title">       
+                                                    <div class="event-title"> 
+
                                                         <span class="date">
                                                             {{events.start_date}}  
                                                         </span>
@@ -128,15 +133,21 @@
                                                             
                                                              <a itemprop="url" [routerLink]="['/event_detail',events.event_id]" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a></h2>
 
-                                                        <div class="listing_rating">
-                                                            <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
-                                                        </div>
+                                                       <div class="listing_rating">
+                                        <div class="directory_rating_row">
+                                            <span class="single_rating"> 
+                                             <rating [(ngModel)]="events.rating"
+                                            [readonly]="true" [float]="true">
+                                            </rating>
+                                            </span>
+                                        </div>
+                                    </div>
                                                     </div>
                                                     <!-- Entry title end --> 
 
                                                     <!-- Entry details start -->
                                                     <div class="entry-details">
-                                                  
+                                                         <p  *ngIf = "getToken" class="address" itemprop="address">{{events.location}}</p>
                                                         <p class="event_date">
                                                             <span>
                                                                 <span itemprop="startDate" content="2014-07-08T15:30"> {{events.start_date}}</span>
@@ -149,7 +160,11 @@
                                             To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_time}}</span>
                                         </span>
                                                            </p><!--googleoff: all-->
-                                                                                                                               
+                                                          <span *ngIf = "getToken">
+                                                      <p class="phone"  *ngIf = "events.contact_info!='' ">
+
+                                                      {{events.contact_info}}</p>
+                                                      </span>                                                                     
                                                     </div>
                                                     <!-- Entry details end --> 
                                                 </div>
@@ -163,7 +178,8 @@
                                                         <li class="favourite">              <span id="tmplfavorite_27097" class="fav fav_27097"><a href="javascript:void(0);" data-reveal-id="tmpl_reg_login_container" id="tmpl_login_frm_27097" data-id="27097" class="addtofav  small_btn" onclick="javascript:addToFavourite('27097', 'add');">Add to favorites</a></span>
                                                         </li>
 
-                                                        <li class="review"> <a href="javascript:void(0);" id="reviews_show" href="http://demo.templatic.com/eventum/city/new-york/event/a-moving-sound/#comments">8 &nbsp;</a></li>
+                                                       
+                                                       <li class="review"> <a id="reviews_show" href="">{{events.comment_count}} &nbsp;</a></li>
 
                                                                    
                                                     </ul></div>                                                                    </div>
