changes in index

--- a/src/app/assets/css/css.minifier.php.css
+++ b/src/app/assets/css/css.minifier.php.css
@@ -3683,7 +3683,7 @@ body #content .claim-post-wraper #recaptcha_table a {
     left: 0;
     top: 1px;
     text-align: center;
-    color:red;
+    color:#FE0002;
     margin-left:3px
 }
 
