--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -20,10 +20,11 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
-                        <a href="">                            
-                            <!--<img src="app/assets/images/ads images/728x90.jpg">-->
+					   <iframe width="100%" height="95" src="banner/event-728x90"></iframe>	
+                       <!-- <a href="">                            
+                            <img src="app/assets/images/ads images/728x90.jpg">
                             <ins data-revive-zoneid="7" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
-                        </a>	
+                        </a> -->
                     </div>
                 </div>
             </div>
