Fixed scroll issue for banner

--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -259,7 +259,7 @@
                     <div id="templatic_text-1" class="widget templatic_text">
                         <div class="widget-wrap widget-inside">     
                             <div class="textwidget text-center">    
-							<iframe width="100%" height="95" src="http://2016.geekmeet.com/banner.php?title=home-728x90"></iframe>
+							<iframe width="100%" scrolling="no" height="100" src="http://2016.geekmeet.com/banner.php?title=home-728x90"></iframe>
                                 <!--<a href="">
                                     <img src="app/assets/images/ads images/728x90.jpg">
 
@@ -408,7 +408,7 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside m-t-20">      
                     <div class="textwidget text-center"> 
-                        <iframe width="100%" height="610" src="http://2016.geekmeet.com/banner.php?title=home-300x600"></iframe>					
+                        <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=home-300x600"></iframe>					
                         <!--<a href="">
 
 
