add password change

--- a/src/app/view/changepassword/changepassword.component.html
+++ b/src/app/view/changepassword/changepassword.component.html
@@ -1,5 +1,3 @@
-<!-- <app-header></app-header> -->
-
 <section id="main" class="clearfix">
     <div class="wrap row">
         <div class="breadcrumb breadcrumbs columns">
@@ -16,23 +14,32 @@
         <div id="content" role="main" class="large-9 small-12 columns" jstcache="0">
             <h1 class="page-title entry-title">Change Password</h1>
 
-            <form name="event-add" id="event-add" action="#" method="post">
+            <form #changePasswordForm="ngForm" (ngSubmit)="updatePassword(changePasswordForm.value)">
                 <div class="event-edit-form large-9 small-12 columns">
                     <div class="form_row clearfix">
                         <label>Current Password<span class="indicates">*</span></label>
-                        <input type="password" name="" id="" value="" class="form-control textfield"> 
+                        <input type="password" name="old_password" class="form-control textfield" ngModel>
+                        <ul class="error" *ngIf="errors['old_password']!=''" >
+                            <li *ngFor="let org_err of errors['old_password']">{{org_err}}</li>    
+                        </ul>  
                     </div>
                     <div class="form_row clearfix">
                         <label>New Password<span class="indicates">*</span></label>
-                        <input type="password" name="" id="" value="" class="form-control textfield"> 
+                        <input type="password" name="password" class="form-control textfield" ngModel>
+                        <ul class="error" *ngIf="errors['password']!=''" >
+                            <li *ngFor="let org_err of errors['password']">{{org_err}}</li>    
+                        </ul>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Reenter Password<span class="indicates">*</span></label>
-                        <input type="password" name="" id="" value="" class="form-control textfield"> 
+                        <input type="password" name="password_confirmation" class="form-control textfield" ngModel>
+                        <ul class="error" *ngIf="errors['password_confirmation']!=''" >
+                            <li *ngFor="let org_err of errors['password_confirmation']">{{org_err}}</li>    
+                        </ul>  
                     </div>
                     <div class="form_row ">
-                        <a class="btn btn-warning" type="submit" value="Save" name="submit">Save</a>
-                    <a class="btn btn-warning" type="reset" value="Save" name="submit">Cancel</a>
+                        <button class="btn btn-info" type="submit">Save</button>
+                    <button class="btn btn-info" type="reset" [routerLink]="['/']" >Cancel</button>
                     </div>
                 </div>
             </form>
@@ -44,5 +51,3 @@
     </div>
     <!-- .wrap -->
 </section>
-
-<!-- <app-footer></app-footer> -->
