--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -704,6 +704,7 @@
 
             <div id="templatic_popular_post_technews-2" class="widget widget-twocolumn popular_posts">
                 <h3 class="widget-title">Popular Events</h3>
+                <p>{{showData}}</p>
                 <ul class="listingview clearfix list" id="list_776778595">
                     <li class="clearfix" *ngFor = "let popular_event of data.popular_event.popularArr">
                         <a href="" title="{{popular_event.event_title}}" class="link_img" data-rel="">
