--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -21,12 +21,12 @@
                 <div class="event-edit-form large-6 small-12 columns">
                     <div class="form_row clearfix">
                         <label>Event Title<span class="indicates">*</span></label>
-                        <input type="text" [(ngModel)]="event_title" id="event-title" name="event_title" value="" class="form-control textfield" required> 
+                        <input type="text" [(ngModel)]="event_title" id="event-title" name="event_title" value="" class="form-control textfield" > 
                         <span class="errfield">{{title}}</span>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Event Description<span class="indicates">*</span></label>
-                        <textarea [(ngModel)]="event_description" name="event_description" id="event-description" value="" rows="5" cols="6" class="textfield" style="height: 194px;" required> </textarea>
+                        <textarea [(ngModel)]="event_description" name="event_description" id="event-description" value="" rows="5" cols="6" class="textfield" style="height: 194px;" > </textarea>
                         <span class="errfield">{{description}}</span> 
                     </div>
                     <div class="form_row clearfix">
@@ -55,7 +55,7 @@
                     </div>
                     <div class="form_row clearfix">
                         <label>Website<span class="indicates">*</span></label>
-                        <input type="url" [(ngModel)]="website" name="website" id="website" value="" class="form-control textfield" required> 
+                        <input type="url" [(ngModel)]="website" name="website" id="website" value="" class="form-control textfield" > 
                         <span class="errfield">{{websiteErr}}</span> 
                     </div>
 
@@ -129,7 +129,7 @@
                     </div>    
                     <div class="form_row clearfix">
                         <label>Contact Info<span class="indicates">*</span></label>
-                        <input type="tel" [(ngModel)]="contact_info" id="contactinfo" name="contact_info" value="" class="form-control textfield">
+                        <input type="tel" [(ngModel)]="contact_info"  name="contact_info" value="" class="form-control textfield">
                         <span class="errfield">{{contact}}</span>                          
                     </div>
                     <div class="form_row clearfix">
@@ -158,7 +158,7 @@
                         <label>Upload Images</label>
                         <!--<input type="file" name="event-images" id="event-images" value="" class="form-control textfield"> 
                         <input id="event-images" name="event-images[]" type="file" class="file" data-preview-file-type="text" multiple>-->
-                        <input id="event-images" name="event-images" [(ngModel)]="event-images" type="file" multiple>
+                        <input id="eventImages" (ngModelChange)="uploadImages($event)" name="eventImages" [(ngModel)]="eventImages" type="file" multiple>
                     </div>
                     <div class="form_row ">                         
                         <button class="btn btn-info" type="submit" value="Save" name="submit">Save</button>                          
