--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -27,7 +27,7 @@
     </div>
     <!-- .sidebar-wrap -->
 </aside>
- <ng2-toasty [position]="'top-center'" ></ng2-toasty>
+<ng2-toasty [position]="'top-center'" ></ng2-toasty>
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
@@ -116,105 +116,38 @@
 <a class="exit-off-canvas"></a>
 <a class="exit-selection"></a>
 
-<!-- 
-<div id="tmpl_reg_login_container" class="reveal-modal tmpl_login_frm_data" data-reveal="">
-    <a href="javascript:;" class="modal_close auto-close"></a> -->
-
-    <!-- Login Form -->
 
 
-    <!-- Registration form -->
-    <div id="tmpl_sign_up" style="display:none;">  
-        <div id="sign_up">  
-            <div class="registration_form_box">
-                <h3>Sign Up </h3>
-                <ul class="social_login social_media_login">
-                    <li>Sign in with</li>
-                    <li><a rel="nofollow" class="facebook"> Facebook</a></li>
-                    <li><a rel="nofollow" class="linkedin" href=""> LinkedIn</a></li>
-                </ul>
-                <p class="login_sep">OR</p>
-                <form name="popup_register" id="popup_register" enctype="multipart/form-data" #regForm="ngForm" (ngSubmit)="userSignUp(regForm.value)">
-
-                    <div class="form_row clearfix">
-                        <label>Full Name <span class="indicates">*</span> </label>
-                        <input name="username" type="text" id="user_name" class="textfield" value="" ngModel>
-                        <span id="user_name_error"></span>
-                    </div>
-                    <div class="form_row clearfix">
-                        <label>Email <span class="indicates">*</span> </label>
-                        <input name="email" type="email" id="user_email" class="textfield" value="" ngModel>
-                        <span id="user_email_error"></span>
-                    </div>
-                    <div class="form_row clearfix">
-                        <label> Password <span class="indicates">*</span> </label>
-                        <input type="password" name="password" id="user_pass" class="textfield" value="" ngModel>
-                        <span id="user_passInfo"></span> 
-                    </div>   
-                    <div class="form_row clearfix">
-                        <label> Confirm Password <span class="indicates">*</span> </label>
-                        <input type="password" name="password_confirmation" id="user_cpass" class="textfield" value="" ngModel>
-                        <span id="user_passInfo"></span> 
-                    </div>  
-                    <div class="form_row clearfix">
-                        <label> Captcha <span class="indicates">*</span> </label>
-                        <recaptcha (resolved)="resolved($event)" siteKey="6Lf4vQwUAAAAAI2XQS2wn-loqlv_HGK9zQJ2Q-MO"></recaptcha>
-                    </div>  
-                    <div class="form_row rember clearfix">
-                        <label>
-                            <input name="rememberme" type="checkbox" id="rememberme" value="forever" class="fl">
-                            Accept<a href="" [routerLink]="['/term-condition']" class="terms"> Terms & Condition</a>
-                        </label>
-                    </div>
-                    <!-- <div id="popup_register_register_cap"></div> -->
-                    <button class="btn btn-warning" type="submit">Sign Up</button>
-                    <button class="btn btn-warning" type="reset" value="Save" name="submit">Cancel</button>
-                </form>
-            </div>
+<!-- this is login modal -->
+<div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
+  <div class="modal-dialog" style="width: 390px;" >
+    <div class="modal-content">
+        <div class="modal-header" id="sign_in_modal">
+            <button id="closeLoginModal" type="button" class="close" data-dismiss="modal" (click)="closeModal()"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+            <h3 class="modal-title" id="lineModalLabel">Sign In</h3>
         </div>
-        <p>Already have an account? <a href="javascript:void(0)" class="widgets-link" onclick="tmpl_login_frm();" id="tmpl-back-login">Sign in</a></p>
-    </div>
+        <div class="modal-body">
+            <form name="popup_login"  #form="ngForm" (ngSubmit)="userSignIn(form.value)">
+                <div class="form_row clearfix">
+                    <label>Username <span class="indicates">*</span> </label>
+                    <input type="text" (click)="usernameErr =''" name="username" id="user_login" size="20" class="textfield" ngModel>
+                    <span id="user_loginInfo">{{usernameErr}}</span> 
+                </div>
+                <div class="form_row clearfix">
+                    <label> Password <span class="indicates">*</span> </label>
+                    <input type="password" (click)="passwordErr =''" name="password" id="user_pass" class="textfield" size="20" ngModel>
+                    <span id="user_passInfo">{{passwordErr}}</span>
+                    <span id="user_passInfo">{{invalidErr}}</span>
+                </div>
+                <div class="form_row rember clearfix">  
+                    <a class="lw_fpw_lnk" data-dismiss="modal" [routerLink]="['/forget-password']" >Forgot your password?</a> 
+                </div>
 
-    <!-- </div> -->
+                <div class="form_row " >
+                    <button id="login-submit" class="btn btn-info" type="submit" aria-hidden="true"> Sign In</button>
+                    <p class="forgot_link">New User? <a data-toggle="modal" data-target="#signupModal" class="logreg-link" id="tmpl-reg-link" (click)="signupClick()">Sign Up</a></p>
+                </div> 
 
-
-
-    <!-- this is login demo  modal squarespaceModal"-->
-    <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 390px;" >
-        <div class="modal-content">
-            <div class="modal-header" id="sign_in_modal">
-                <button id="closeLoginModal" type="button" class="close" data-dismiss="modal" (click)="closeModal()"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title" id="lineModalLabel">Sign In</h3>
-            </div>
-            <div class="modal-body">
-
-                <!-- content goes here -->
-                <form name="popup_login"  #form="ngForm" (ngSubmit)="userSignIn(form.value)">
-                    <div class="form_row clearfix">
-                        <label>Username <span class="indicates">*</span> </label>
-                            <input type="text" (click)="usernameErr =''" name="username" id="user_login" size="20" class="textfield" ngModel>
-                        <span id="user_loginInfo">{{usernameErr}}</span> 
-                    </div>
-                    <div class="form_row clearfix">
-                        <label> Password <span class="indicates">*</span> </label>
-                        <input type="password" (click)="passwordErr =''" name="password" id="user_pass" class="textfield" size="20" ngModel>
-                        <span id="user_passInfo">{{passwordErr}}</span>
-                        <span id="user_passInfo">{{invalidErr}}</span>
-                    </div>
-                    <div class="form_row rember clearfix">
-                        <label>
-                            <input name="rememberme" type="checkbox" id="rememberme" value="forever" class="fl">
-                            Remember me on this computer 
-                        </label>    
-                        <a onclick="showhide_forgetpw('popup_login');" href="javascript:void(0)" class="lw_fpw_lnk">Forgot your password?</a> 
-                    </div>
-
-                    <div class="form_row " >
-                        <button id="login-submit" class="btn btn-info" type="submit" aria-hidden="true"> Sign In</button>
-                        <p class="forgot_link">New User? <a data-toggle="modal" data-target="#signupModal" class="logreg-link" id="tmpl-reg-link" (click)="signupClick()">Sign Up</a></p>
-                    </div> 
-                    
                 </form>
 
             </div>
@@ -225,22 +158,15 @@
 
 
 
-
-
-
-
- <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog" style="width: 420px;" id="sign_up_modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button id="closeSignupModal" type="button" class="close" data-dismiss="modal" (click)="closeModal()"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+<!-- this is signup modal -->
+<div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog" style="width: 420px;" id="sign_up_modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button id="closeSignupModal" type="button" class="close" data-dismiss="modal" (click)="closeModal()"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
             <h3 class="modal-title" id="lineModalLabel">Sign Up</h3>
         </div>
         <div class="modal-body">
-
-            <!-- content goes here -->
-
-
             <ul class="social_login social_media_login">
                 <li>Sign in with</li>
                 <li><a rel="nofollow" class="facebook" (click)="loginWithFb()"> Facebook</a></li>
@@ -289,74 +215,11 @@
                         Accept<a href="" [routerLink]="['/term-condition']" class="terms" data-dismiss="modal"> Terms & Condition</a>
                     </label>
                 </div>
-                <!-- <div id="popup_register_register_cap"></div> -->
                 <button class="btn btn-info" type="submit">Sign Up</button>
                 <button (click)="closeModal()" class="btn btn-info" type="reset" value="Save" name="submit" data-dismiss="modal">Cancel</button>
             </form>
         </div>
-
-        <p style="margin-left: 15px;">Already have an account? <a data-toggle="modal" data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>
-
-
-
-        
+             <p style="margin-left: 15px;">Already have an account? <a data-toggle="modal" data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>  
+        </div>
     </div>
 </div>
-</div>
-
-
-
-
-
-<!--  <div id="tmpl_login_frm"> 
-        <div class="login_form_l">
-            <h3>Sign In</h3>            
-            <div class="login_form_box">
-                <form name="popup_login"  #form="ngForm" (ngSubmit)="userSignIn(form.value)">
-                    <div class="form_row clearfix">
-                        <label>Email <span class="indicates">*</span> </label>
-                        <div class="form-group">
-                        <input type="text" name="username" id="user_login" size="20" class="textfield" ngModel required>
-                        </div>
-                     <span id="user_loginInfo"></span>  
-                    </div>
-                    <div class="form_row clearfix">
-                        <label> Password <span class="indicates">*</span> </label>
-                        <input type="password" name="password" id="user_pass" class="textfield" size="20" ngModel required>
-                         <span id="user_passInfo"></span>  -
-                    </div>
-                    <div class="form_row rember clearfix">
-                        <label>
-                            <input name="rememberme" type="checkbox" id="rememberme" value="forever" class="fl">
-                            Remember me on this computer 
-                        </label>    
-                         html to show social login -
-                        <a onclick="showhide_forgetpw('popup_login');" href="javascript:void(0)" class="lw_fpw_lnk">Forgot your password?</a> 
-                    </div>
-
-                    <div class="form_row ">
-                        <button id="login-submit" class="btn btn-info" type="submit" data-dismiss="tmpl_login_frm"> Sign In</button>
-                        <p class="forgot_link">New User? <a href="javascript:void(0)" class="logreg-link" onclick="tmpl_registretion_frm();" id="tmpl-reg-link">Sign Up</a></p>
-                    </div> 
-                    
-                </form>
-
-
-                <div class="forgotpassword" id="lostpassword_form" style="display:none;">
-                    <h3>Forgot password</h3>
-                    <form name="popup_login_forgot_pass" id="popup_login_forgot_pass" action="" method="post">
-                        <input type="hidden" name="action" value="lostpassword">
-                        <div class="form_row clearfix">
-                            <label> Email: </label>
-                            <input type="text" name="user_login" id="user_login_email" value="" size="20" class="textfield">
-                            <span id="forget_user_email_error" class="message_error2"></span>
-                        </div>
-                        <input type="hidden" name="pwdredirect_to" value="">
-                        <a class="btn btn-warning " type="submit" value="Save" name="submit">Get New Password</a>
-                    </form>
-                </div>
-            </div> -->
-
-            <!--Scripts start -->
-            <!-- </body> -->
-<!-- </html> -->
